--- a/modulos/4-html-css/4-desenvolvimento/index.html
+++ b/modulos/4-html-css/4-desenvolvimento/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Recife - Marco Zero</title>
 </head>
 <body>
@@ -15,8 +16,8 @@
         <section>
             <h2>O Encanto do Marco Zero</h2>
             <p>O <strong>Marco Zero</strong> é um dos pontos turísticos mais emblemáticos de Recife, situado no coração da cidade.</p>
-
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/26/Ground_Zero_-_Recife_-_Pernambuco_-_Brazil.jpg/138px-Ground_Zero_-_Recife_-_Pernambuco_-_Brazil.jpg" alt="Marco Zero de Recife">
+
 
             <p>O Marco Zero marca o início das contagens das distâncias nas estradas de Pernambuco. Além disso, é palco de diversas manifestações culturais e artísticas.</p>
         </section>
@@ -46,9 +47,13 @@
         <section>
             <h2>Galeria de Imagens</h2>
             <div class="gallery">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/82/Antonio_Vaz_island_-_Recife%2C_Pernambuco%2C_Brazil_%28cropped%29.jpg/278px-Antonio_Vaz_island_-_Recife%2C_Pernambuco%2C_Brazil_%28cropped%29.jpg" alt="Recife à Noite">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b4/Torre_de_Cristal_-_Recife-PE%282%29_%28cropped%29.jpg/76px-Torre_de_Cristal_-_Recife-PE%282%29_%28cropped%29.jpg" alt="Praia de Boa Viagem">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/17/Frevo_dancers_-_Olinda%2C_Pernambuco%2C_Brazil.jpg/220px-Frevo_dancers_-_Olinda%2C_Pernambuco%2C_Brazil.jpg" alt="Frevo de Recife">
+              
+              <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/17/Frevo_dancers_-_Olinda%2C_Pernambuco%2C_Brazil.jpg/220px-Frevo_dancers_-_Olinda%2C_Pernambuco%2C_Brazil.jpg" alt="Frevo de Recife">
+              <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/82/Antonio_Vaz_island_-_Recife%2C_Pernambuco%2C_Brazil_%28cropped%29.jpg/278px-Antonio_Vaz_island_-_Recife%2C_Pernambuco%2C_Brazil_%28cropped%29.jpg" alt="Recife à Noite">
+              <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/17/Frevo_dancers_-_Olinda%2C_Pernambuco%2C_Brazil.jpg/220px-Frevo_dancers_-_Olinda%2C_Pernambuco%2C_Brazil.jpg" alt="Frevo de Recife">
+              <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/82/Antonio_Vaz_island_-_Recife%2C_Pernambuco%2C_Brazil_%28cropped%29.jpg/278px-Antonio_Vaz_island_-_Recife%2C_Pernambuco%2C_Brazil_%28cropped%29.jpg" alt="Recife à Noite">
+              <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b4/Torre_de_Cristal_-_Recife-PE%282%29_%28cropped%29.jpg/76px-Torre_de_Cristal_-_Recife-PE%282%29_%28cropped%29.jpg" alt="Praia de Boa Viagem">
+              <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/17/Frevo_dancers_-_Olinda%2C_Pernambuco%2C_Brazil.jpg/220px-Frevo_dancers_-_Olinda%2C_Pernambuco%2C_Brazil.jpg" alt="Frevo de Recife">
             </div>
         </section>
     </main>
